Bug 146143 - arrows aren't well aligned when the "snap to grid" is activated
Summary: arrows aren't well aligned when the "snap to grid" is activated
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Steyn
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-05-30 12:19 UTC by meyerm
Modified: 2014-08-24 15:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.1
Sentry Crash Report:


Attachments
screenshot of the "snap to grid" problem (65.82 KB, image/jpeg)
2007-05-30 12:20 UTC, meyerm
Details

Note You need to log in before you can comment on or make changes to this bug.
Description meyerm 2007-05-30 12:19:43 UTC
Version:           1.5.7 (using KDE 3.5.7, Gentoo)
Compiler:          Target: i686-pc-linux-gnu
OS:                Linux (i686) release 2.6.21-gentoo-r2debug

When I enable the "snap to grid"-function, the "in- and outputpins" of objects are also aligned to the grid. That means that connections lines are not centered at an object but coming out / going to the nearest grid point.

I will try to create some sample (which doesn't make sense ;-) ) and attach a screenshot.
Comment 1 meyerm 2007-05-30 12:20:46 UTC
Created attachment 20726 [details]
screenshot of the "snap to grid" problem
Comment 2 Joris Steyn 2014-08-24 14:51:07 UTC
Git commit b93faa958efa1d887c3f25d86b3fbb6a4312a748 by Joris Steyn.
Committed on 24/08/2014 at 14:31.
Pushed by jorissteyn into branch 'master'.

Fix visually disconnected lines on snapped movement

M  +7    -7    umbrello/widgets/associationwidget.cpp

http://commits.kde.org/umbrello/b93faa958efa1d887c3f25d86b3fbb6a4312a748
Comment 3 Joris Steyn 2014-08-24 15:38:31 UTC
Git commit 3cacf294073f6c448c7ca2e431d913bc74ae5cc5 by Joris Steyn.
Committed on 24/08/2014 at 14:31.
Pushed by jorissteyn into branch 'KDE/4.14'.

Fix visually disconnected lines on snapped movement
FIXED-IN: 4.14.1

M  +7    -7    umbrello/widgets/associationwidget.cpp

http://commits.kde.org/umbrello/3cacf294073f6c448c7ca2e431d913bc74ae5cc5