Fix visually disconnected lines on snapped movement

BUG: 146143